--- a/CSSFiles/style.css
+++ b/CSSFiles/style.css
@@ -29,3 +29,25 @@ tr {
     border: solid;
     border-width: 1px 0;
 }
+
+table.bracket {
+    border-collapse: collapse;
+    border: none;
+}
+
+.bracket td {
+    vertical-align: middle;
+    width: 40em;
+    margin: 0;
+    padding: 10px;
+}
+
+.bracket td p {
+    border-bottom: solid 1px black;
+    margin: 0;
+    padding: 5px 5px 5px 5px;
+}
+
+.bracket th{
+    text-align:center;
+}
