--- a/CSSFiles/style.css
+++ b/CSSFiles/style.css
@@ -51,3 +51,18 @@ table.bracket {
 .bracket th{
     text-align:center;
 }
+
+button {
+    height: 80px;
+    width: 100px;
+    background-color: #555; /* Green */
+    border: none;
+    color: white;
+    /*padding: 15px 32px; */
+    margin-bottom: 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 12px;
+    word-wrap: break-word;
+  }
