--- a/CSSFiles/style.css
+++ b/CSSFiles/style.css
@@ -1,6 +1,6 @@
 body{
-    background-color: lightgrey;
-    color: #555;
+    background-color: rgb(61, 137, 54);
+    color: rgb(255, 255, 255);
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
     line-height: 1.6em;
@@ -72,7 +72,8 @@ button {
   }
 
   .abbreviations{
-    color: red;
+    color: rgb(250, 250, 250);
     font-size: 16px;
+    font-weight: bold;
     margin: 5px;
   }
